[package]
name = "nomad-rs"
version = "0.0.1-beta.2"
edition = "2021"

description = "A client to interact with Nomad by HashiCorp"
repository = "https://github.com/unknown/nomad-rs"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["stream", "json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
